Consulta com vários critérios e ajuste de erros